[gd_scene load_steps=20 format=3 uid="uid://boqr2431f515h"]

[ext_resource type="Script" uid="uid://ciolxcympoldl" path="res://scripts/enemy_jumping.gd" id="1_0qe6k"]
[ext_resource type="Texture2D" uid="uid://cdmp5lycy7xb" path="res://graphics/enemies/rabbido/enemy_rabbido_idle_sprite_01_v1.png" id="2_0qe6k"]
[ext_resource type="AudioStream" uid="uid://sfe75pkghb70" path="res://audio/sfx/sfx_enemy_idle1.mp3" id="2_7k8ur"]
[ext_resource type="Texture2D" uid="uid://dd7esuy0r5ii0" path="res://graphics/enemies/rabbido/enemy_rabbido_jump_sprite_01_v1.png" id="3_h8ayp"]
[ext_resource type="AudioStream" uid="uid://coawmknvyg73q" path="res://audio/sfx/hit_hurt/hitHurt (1).wav" id="3_lvsbn"]
[ext_resource type="Texture2D" uid="uid://cnsq1c6nh0v6w" path="res://graphics/vfx/bloodsplat/vfx_bloodsplat_01_v1.png" id="4_b010m"]
[ext_resource type="AudioStream" uid="uid://rghhmxcvoo5d" path="res://audio/sfx/hit_hurt/hitHurt (3).wav" id="4_wdxwj"]
[ext_resource type="Texture2D" uid="uid://kmklbde4dcvn" path="res://graphics/vfx/bloodsplat/vfx_bloodsplat_02_v1.png" id="5_1oxq4"]
[ext_resource type="AudioStream" uid="uid://cdbwupu6r0c4l" path="res://audio/sfx/power_up/powerUp (1).wav" id="5_sg7sa"]
[ext_resource type="Texture2D" uid="uid://mwg3rxasoq7l" path="res://graphics/vfx/bloodsplat/vfx_bloodsplat_03_v1.png" id="6_48mj4"]
[ext_resource type="AudioStream" uid="uid://cg6axmkpibph" path="res://audio/sfx/laser_shoot/laserShoot.wav" id="6_xvycj"]
[ext_resource type="AudioStream" uid="uid://d1nm5cmdpstd" path="res://audio/sfx/Footsteps_U/grass_001_23185.mp3" id="7_rkx27"]
[ext_resource type="Texture2D" uid="uid://b2sqoexe2p14y" path="res://graphics/vfx/bloodsplat/vfx_bloodsplat_04_v1.png" id="7_sd62q"]
[ext_resource type="Texture2D" uid="uid://dicx17w4j5dg4" path="res://graphics/vfx/bloodsplat/vfx_bloodsplat_05_v1.png" id="8_2fgld"]
[ext_resource type="Texture2D" uid="uid://dn04hog0ktrk4" path="res://graphics/vfx/bloodsplat/vfx_bloodsplat_06_v1.png" id="9_2aaw1"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ge483"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_0qe6k")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_h8ayp")
}],
"loop": true,
"name": &"jump",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ffj3o"]
radius = 16.0
height = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ld2qc"]
radius = 11.5

[sub_resource type="SpriteFrames" id="SpriteFrames_7k8ur"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_b010m")
}, {
"duration": 1.0,
"texture": ExtResource("5_1oxq4")
}, {
"duration": 1.0,
"texture": ExtResource("6_48mj4")
}, {
"duration": 1.0,
"texture": ExtResource("7_sd62q")
}, {
"duration": 1.0,
"texture": ExtResource("8_2fgld")
}, {
"duration": 1.0,
"texture": ExtResource("9_2aaw1")
}],
"loop": false,
"name": &"bloodsplatter",
"speed": 24.0
}]

[node name="Enemy_Jumping_01" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource("1_0qe6k")
jump_interval = 0.1
max_health = 1
idle_sound = ExtResource("2_7k8ur")
idle_volume = -20.0
hurt_sound = ExtResource("3_lvsbn")
hurt_volume = -20.0
death_sound = ExtResource("4_wdxwj")
death_volume = -5.0
jump_sound = ExtResource("5_sg7sa")
jump_volume = -20.0
in_air_sound = ExtResource("6_xvycj")
in_air_volume = -20.0
landing_sound = ExtResource("7_rkx27")
landing_volume = -20.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
rotation = 3.1415927
sprite_frames = SubResource("SpriteFrames_ge483")
animation = &"jump"
flip_h = true
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ffj3o")

[node name="WallRayRight" type="RayCast2D" parent="."]
rotation = -1.5708
target_position = Vector2(0, 35)
collision_mask = 9

[node name="WallRayLeft" type="RayCast2D" parent="."]
rotation = 1.5708
target_position = Vector2(0, 35)
collision_mask = 9

[node name="LedgeRayRight" type="RayCast2D" parent="."]
position = Vector2(20, 0)
target_position = Vector2(0, 48.03)
collision_mask = 9

[node name="LedgeRayLeft" type="RayCast2D" parent="."]
position = Vector2(-20, 0)
target_position = Vector2(0, 48.03)
collision_mask = 9

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(0, 10)
scale = Vector2(2, 2)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_ld2qc")

[node name="BloodSplatter" type="AnimatedSprite2D" parent="."]
z_index = -1
scale = Vector2(-1.2798374, 1.2798374)
sprite_frames = SubResource("SpriteFrames_7k8ur")
animation = &"bloodsplatter"

[node name="IdlePlayer" type="AudioStreamPlayer2D" parent="."]
max_distance = 500.0
bus = &"sfx"

[node name="SFXPlayer" type="AudioStreamPlayer2D" parent="."]
max_distance = 500.0
bus = &"sfx"

[node name="InAirPlayer" type="AudioStreamPlayer2D" parent="."]
max_distance = 500.0
bus = &"sfx"
